# taranis-ai

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  VERSION.md  dev_requirements.txt  flake.nix  pyproject.toml  requirements.txt  taranis.nix
src/bots/: app.py  config.py  requirements.txt  run.py  setup.cfg  setup.py
src/bots/api/: __init__.py  bots.py  isalive.py
src/bots/bots/: __init__.py  __main__.py  analyst_bot.py  base_bot.py  config.py  grouping_bot.py  nlp_bot.py  tagging_bot.py  wordlist_updater_bot.py
src/bots/managers/: __init__.py  api_manager.py  auth_manager.py  bots_manager.py  log_manager.py  sse_manager.py  time_manager.py
src/bots/remote/: core_api.py
src/bots/schema/: acl_entry.py  bot.py  news_item.py  parameter.py  parameter_value.py  presentation.py  user.py  word_list.py
src/bots/tests/: conftest.py  test_api.py  test_settings.py
src/collectors/: app.py  requirements.txt  run.py  setup.cfg  setup.py  task.sh
src/collectors/api/: __init__.py  collectors.py
src/collectors/collectors/: __init__.py  atom_collector.py  base_collector.py  config.py  email_collector.py  rss_collector.py  scheduled_tasks_collector.py  slack_collector.py  twitter_collector.py  web_collector.py
src/collectors/managers/: __init__.py  api_manager.py  auth_manager.py  collectors_manager.py  log_manager.py  time_manager.py
src/collectors/remote/: core_api.py
src/collectors/schema/: collector.py  osint_source.py  role.py  word_list.py
src/collectors/tests/: .env  conftest.py  test_api.py  test_settings.py
src/core/: .coverage  .gitignore  MANIFEST.in  README.md  app.py  client_secrets.json  config.py  db_migration.py  debug.py  gunicorn.conf.py  install_and_run_dev.sh  manage.py  pyproject.toml  requirements.txt  run.py  run.wsgi  run_for_e2e.sh  setup.cfg  setup.py  start-granian.py  sync_dev_db.py  yoyo.ini
src/core/api/: __init__.py  analyze.py  assess.py  assets.py  auth.py  bots.py  collectors.py  config.py  dashboard.py  isalive.py  keycloak.py  presenters.py  publish.py  publishers.py  remote.py  user.py
src/core/auth/: __init__.py  base_authenticator.py  keycloak_authenticator.py  openid_authenticator.py  test_authenticator.py
src/core/core/: __init__.py  __main__.py  audit.py  collaboration_realtime.py  config.py  granian.py  healthcheck.py  log.py
src/core/managers/: __init__.py  api_manager.py  asset_manager.py  audit_manager.py  auth_manager.py  bots_manager.py  collectors_manager.py  db_manager.py  external_auth_manager.py  log_manager.py  presenters_manager.py  publishers_manager.py  remote_manager.py  sse_manager.py  tagcloud_manager.py
src/core/migrations/: 20240427_01_e4nGV-initial-migration-noop.py  20240527_01_uP9Rl-update-news-item-osint-source-id-fkey-to-include-on-delete-cascade.py  20240703_01_KgAWj-update-user-model.py  20240724_01_BSqvf-fix-product-report-item-constraints.py  20240821_01_txQiJ-add-links-to-stories.py  20240909_01_D8TvE-on-delete-cascade-on-report-item-story.py  20241009_01_6d1Tn-cleanup-worker-types.py  20250207_01_QyCEn-remove-obsolte-column-from-product.py  20250228_01_Pnb5c-refactor-organization.py  20250324_01_01Jre-add-a-table-connector.py  20250324_02_vL3hN-add-last-change-column.py  20250409_01_f8gaM-add-new-misp-related-enums.py  20250410_01_fquYo-add-cybersecurity-column-to-story.py  20250411_01_qSHFw-add-connector-permissions.py  20250423_01_fpBWs-migrate-tlp.py  20250424_01_cLXiI-story-news-item-fk.py  20250519_01_lbcsK-remove-last-change-in-story-and-newsitem-table.py  20250530_01_bgjgJ-add-ppn-collector.py  20250718_01_g9Kuh-add-transaction-table-for-sqlalchemy-continuum.py  20250722_01_L615L-add-docx-presenter.py  20250723_01_story_history_table.py  20250730_01_7adhi-add-pandoc-presenter.py  20250820_01_H1Omd-worker-status.py  20250925_01_PonlV-add-render-result-column-to-reportitem-model.py  20251010_01_OQVEW-migrate-story-links.py  20251106_01_U7YeD-migrate-search-vector.py  20251125_01_G4vgL-add-default-publisher-to-product.py  20251201_01_FHh3L-add-story-report-revisions.py  20260311_01_X8h2K-add-parent-revision-columns.py  20260316_01_N6e5T-report-types-title-unique.py  20260321_01_h17Zo-bot-disable-toggle.py  20260323_01_j8LqN-add-osint-source-rank.py  20260326_01_r8PqL-story-relevance-redesign.py  20260327_01_g4M1a-rebuild-story-search-vectors.py  20260408_01_t7KpQ-add-user-last-login.py  20260416_01_Q7vKp-add-task-worker-metadata.py  20260417_01_pK8sR-migrate-primary-keys-to-uuidv7.py  20260423_01_Va9mQ-move-news-item-tags-to-news-items.py  20260527_01_G6kLm-add-collection-run-telemetry.py  20260527_01_H2kQm-add-task-kwargs-column.py  (+4 more)
src/core/model/: __init__.py  acl_entry.py  address.py  asset.py  attribute.py  audit_record.py  bot.py  bot_preset.py  bots_node.py  collector.py  collectors_node.py  log_record.py  news_item.py  notification_template.py  organization.py  osint_source.py  parameter.py  role.py  (+16 more)
src/frontend/: .gitignore  Containerfile  README.md  app.py  babel.cfg  build_tailwindcss.sh  conftest.py  deno.json  env.sample  extend_tmux.sh  install_and_run_dev.sh  install_and_run_tailwind.sh  package.json  pnpm-lock.yaml  pyproject.toml  run_e2e_tests.sh  start_dev.sh  tailwind.config.js  tox.ini  update_assets.sh  vendor.js  vendor_codemirror.js
src/models/: .gitignore  README.md  pyproject.toml
src/publishers/: .env  app.py  config.py  requirements.txt  run.py  setup.cfg  setup.py
src/shared/: README.md  pyproject.toml  setup.cfg  setup.py
src/worker/: .gitignore  README.md  Test_Text_Product_10-04-2024_17-04.txt  install_and_run_cron.sh  install_and_run_dev.sh  install_and_run_rq_dashboard.sh  model_download.py  pyproject.toml  setup.cfg  show_cron_jobs.py  start_cron_scheduler.py  start_dev_worker.py  tox.ini
src/workers/: setup.cfg  setup.py
tests/load/: Containerfile  README.md  conftest.py  docker-compose.load.yml  locustfile.py  pyproject.toml  test_format_locust_report.py  test_frontend_flows.py  test_playwright_stats.py  test_report_server.py  test_seed_data.py  test_summarize_stats.py
(+2044 files in other folders)
