[metadata]
name = taranis-ng_bots
version = 0.1.9
description = Taranis-NG Bots
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = SK-CERT, AIT
url = https://github.com/SK-CERT/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    # Core
    Flask
    Flask-Cors
    flask-restx
    gunicorn
    python-dotenv
    pydantic<2
    taranis-ng-shared

    # Module Specific
    torch
    spacy
    tweepy
    transformers
    sentencepiece
    py3langid

    xx_ent_wiki_sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.5.0/xx_ent_wiki_sm-3.5.0-py3-none-any.whl
