[metadata]
name = taranis-ng_collectors
version = 0.1.0
description = Taranis-NG Collectors
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = SK-CERT, AIT
url = https://github.com/SK-CERT/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    Flask
    Flask-Cors
    flask-restx

    gunicorn
    python-dotenv
    pydantic

    beautifulsoup4
    requests
    requests[socks]
    python-dateutil

    schedule
    dateparser
    slackclient==1.3.2
    PySocks
    tweepy
    lxml
    feedparser
    selenium
    trafilatura
    taranis-ng-shared
