[project]
name = "taranis-core"
description = "Taranis Core"
readme = "README.md"
license = { file = "LICENSE.md" }
maintainers = [{ name = "AIT", email = "benjamin.akhras@ait.ac.at" }]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Security",
]
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "Flask-Cors",
    "Flask-JWT-Extended",
    "yoyo-migrations",
    "Flask-SQLAlchemy",
    "flask_caching",
    "click",
    "celery",
    "SQLAlchemy",
    "pydantic-settings",
    "python-dotenv",
    "granian",
    "psycogreen",
    "psycopg2",
    "swagger-ui-py",
    "requests",
    "authlib",
    "setuptools",
    "sentry-sdk[flask]",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["core"]
include-package-data = true

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
root = "../.."

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-celery", "pytest-flask", "sqlalchemy2-stubs", "schemathesis", "build", "wheel", "setuptools_scm", "pytest-playwright"]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/taranis-ai"

[tool.ruff]
line-length = 142
target-version = "py312"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
markers = [
    "e2e_user: marks tests as to run only when calling with --run-e2e option",
    "e2e_user_ci: marks tests as to run only when calling with --run-e2e-ci option",
    "e2e_publish: marks only the tests related to publishing in from the e2e test",
    "e2e_admin: marks tests that produce pictures for the documentation"
]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 142
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring
"""

[tool.mypy]
explicit_package_bases = true
namespace-packages = true
exclude = [
    '__main__.py',
    'tests/'
]