[project]
name = "taranis-core"
description = "Taranis Core"
readme = "README.md"
license = "EUPL-1.2"
maintainers = [{ name = "AIT", email = "benjamin.akhras@ait.ac.at" }]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
    "Topic :: Security",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "Flask",
    "Flask-Cors",
    "Flask-JWT-Extended",
    "yoyo-migrations",
    "Flask-SQLAlchemy",
    "click",
    "rq>=2.5",
    "croniter>=6.0.0",
    "SQLAlchemy",
    "pydantic-settings",
    "python-dotenv",
    "Pillow",
    "granian",
    "psycopg",
    "requests",
    "authlib>=1.7.1,<1.8",
    "setuptools",
    "taranis-models>=1.3.3.dev5",
    "sentry-sdk[flask]",
    "sentry-sdk[sqlalchemy]",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["core"]
include-package-data = true

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project.scripts]
taranis-ai = "core.granian:main"
taranis-core-healthcheck = "core.healthcheck:main"

[tool.setuptools_scm]
root = "../.."

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-flask",
    "pytest-docker",
    "fakeredis",
    "schemathesis >=4,<5",
    "build",
    "wheel",
    "setuptools_scm",
    "pytest-playwright",
    "playwright",
]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/taranis-ai"

[tool.ruff]
line-length = 142
target-version = "py313"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
pythonpath = [".", "../.."]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::hypothesis.errors.HypothesisDeprecationWarning"
]

[tool.coverage.run]
branch = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 142
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring
"""

[tool.mypy]
explicit_package_bases = true
namespace-packages = true
exclude = [
    '__main__.py',
    'tests/'
]

[tool.pyright]
typeCheckingMode = "standard"
reportConstantRedefinition = "error"
reportDuplicateImport = "error"
reportMissingTypeStubs = "warning"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"

reportDeprecated = "warning"
reportMatchNotExhaustive = "warning"
reportUnnecessaryCast = "warning"
reportUnreachable = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"

reportIncompatibleVariableOverride = "none"
reportIncompatibleMethodOverride = "none"

[tool.uv]
config-settings = { editable_mode = "compat" }
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
taranis-models = { path = "../models", editable = true }
