[metadata]
name = taranis-ng_core
version = 0.1.0
description = Taranis-NG Core
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = SK-CERT, AIT
url = https://github.com/SK-CERT/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    # Flask
    Flask
    Flask-Cors
    Flask-JWT-Extended
    Flask-Migrate
    Flask-RESTful
    Flask-SQLAlchemy
    Flask-SSE

    # Core
    SQLAlchemy
    alembic
    click
    pydantic
    python-dotenv
    gevent
    gunicorn
    psycogreen
    psycopg2
    marshmallow
    marshmallow-enum
    taranis-ng-shared @ https://github.com/ait-cs-IaaS/Taranis-NG/releases/download/v0.1.0/taranis_ng_shared-0.1.0.tar.gz

    # Module Specific
    aiohttp
    aiosignal
    async-generator
    async-timeout
    dateparser
    Deprecated
    tzdata
    tzlocal
    regex
    requests
    requests-oauthlib
    redis

    # Obsolete ?
    schedule
    Authlib
    httplib2
    oauthlib
    outcome
    pyOpenSSL
    pyparsing
    python-editor
    python-jose
    python-keycloak
    sgmllib3k
    sniffio
    sortedcontainers
    soupsieve
    sseclient-py
    urllib3
    wrapt
    wsproto
    yarl
