[metadata]
name = taranis-ng_core
version = 0.1.4
description = Taranis-NG Core
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = SK-CERT, AIT
url = https://github.com/SK-CERT/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    # Flask
    Flask
    Flask-Cors
    Flask-JWT-Extended
    Flask-Migrate
    Flask-RESTful
    Flask-SQLAlchemy==2.5.1
    Flask-SSE

    # Core
    SQLAlchemy==1.4.40
    click
    pydantic
    python-dotenv
    gevent
    gunicorn
    psycogreen
    psycopg2
    marshmallow
    marshmallow-enum
    taranis-ng-shared

    # Module Specific
    dateparser
    swagger-ui-py
    tzdata
    tzlocal
    requests
    requests-oauthlib

    # Obsolete ?
    Deprecated
    schedule
    Authlib
    oauthlib
    pyparsing
    python-keycloak
    sseclient-py
