[metadata]
name = taranis-ng_core
version = 0.1.9
description = Taranis-NG Core
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = SK-CERT, AIT
url = https://github.com/SK-CERT/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    # Flask
    Flask
    Flask-Cors
    Flask-JWT-Extended
    Flask-Migrate
    flask-restx
    Flask-SQLAlchemy

    # Core
    SQLAlchemy==1.4.40
    click
    pydantic
    python-dotenv
    gevent
    gunicorn
    psycogreen
    psycopg2
    marshmallow
    marshmallow-enum
    taranis-ng-shared

    # Module Specific
    dateparser
    swagger-ui-py @ https://github.com/b3n4kh/swagger-ui-py/releases/download/23.6.15/swagger-ui-py-23.6.15.tar.gz
    tzdata
    tzlocal
    requests
    requests-oauthlib

    # Obsolete ?
    Deprecated
    schedule
    Authlib
    oauthlib
    pyparsing
    python-keycloak
    sseclient-py

[tool:pytest]
#mocked-engines=core.managers.db_manager.db.session.get_bind()
#mocked-sessions=core.managers.db_manager.db.session
