[project]
name = "taranis-frontend"
description = "Taranis AI Frontend"
readme = "README.md"
license = "EUPL-1.2"
maintainers = [{ name = "AIT", email = "benjamin.akhras@ait.ac.at" }]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
    "Topic :: Security",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "Flask",
    "Flask-Caching",
    "Flask-JWT-Extended",
    "flask-htmx",
    "jinja2-fragments",
    "flask-cors",
    "click",
    "pydantic-settings",
    "swagger-ui-py-x",
    "python-dotenv",
    "granian",
    "requests",
    "setuptools",
    "polyfactory",
    "uuid7",
    "filetype",
    "heroicons[jinja]>=2.11.0",
    "plotly[express]",
    "pandas",
    "taranis-models",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["frontend"]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0"
root = "../.."

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-flask", "lxml", "build", "wheel", "setuptools_scm", "pytest-playwright", "playwright", "djlint", "pytest-responses"]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/taranis-ai"

[tool.ruff]
line-length = 142
target-version = "py313"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "e2e_ci: marks tests as to run only when calling with --e2e-ci option",
    "e2e_timeout: time in milliseconds to wait for the e2e tests to finish",
    "e2e_admin: marks tests that produce pictures for the documentation",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 142
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring
"""

[tool.mypy]
explicit_package_bases = true
namespace-packages = true
exclude = [
    '__main__.py',
    'tests/'
]

[tool.djlint]
preserve_blank_lines=true
max_line_length=142
max_attribute_length=142
ignore = "J018,T028"
profile="jinja"
indent=2

[tool.uv]
config-settings = { editable_mode = "compat" }
prerelease = "allow"

