[metadata]
name = taranis-ng_publishers
version = 0.1.0
description = Taranis-NG Publishers
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = SK-CERT, AIT
url = https://github.com/SK-CERT/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    Flask==2.1.3
    Flask-Cors==3.0.10
    Flask-RESTful==0.3.9
    gevent==21.8.0
    gunicorn==20.0.4
    httplib2==0.18.1
    marshmallow==3.17.0
    marshmallow-enum==1.5.1
    oauth2client==4.1.3
    paramiko==2.11.0
    python-dateutil==2.8.1
    python-dotenv==0.10.3
    python-gnupg==0.4.6
    requests==2.28.1
    schedule==0.6.0
    tweepy==3.10.0
    pymisp==2.4.128
