[metadata]
name = taranis-ng_publishers
version = 0.1.0
description = Taranis-NG Publishers
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = SK-CERT, AIT
url = https://github.com/SK-CERT/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    Flask
    Flask-Cors
    Flask-RESTful
    gevent
    gunicorn
    python-dotenv
    pydantic
    requests
    taranis-ng-shared @ https://github.com/ait-cs-IaaS/Taranis-NG/releases/download/v0.1.0/taranis_ng_shared-0.1.0.tar.gz

    paramiko
    schedule
    tweepy
    pymisp
