[metadata]
name = taranis-ng_shared
version = 0.1.4
description = Taranis-NG Shared Classes
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = SK-CERT, AIT
url = https://github.com/SK-CERT/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    marshmallow
    marshmallow-enum
