[project]
name = "taranis-worker"
description = "Taranis Queue Worker"
readme = "README.md"
license = "EUPL-1.2"
maintainers = [{ name = "AIT", email = "benjamin.akhras@ait.ac.at" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Celery",
    "Topic :: Security",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core
    "prefect-client",
    "click",
    "python-dotenv",
    "pydantic-settings",
    "taranis-models",
    "requests",
    "requests[socks]",
    # Collector
    "beautifulsoup4",
    "trafilatura",
    "feedparser",
    "pyopenssl",
    "lxml",
    "playwright",
    "langcodes",
    # Publisher
    "paramiko",
    "python-gnupg",
    # Presenters
    "weasyprint",
    "jinja2",
    # Connectors
    "pymisp",
    # Bots
    "ioc-finder",
    "ioc-fanger",
    "langdetect",
    "pypandoc-binary>=1.15",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "requests-mock",
    "watchdog",
    "build",
    "wheel",
    "setuptools",
    "setuptools_scm",
    "mock-ssh-server @ https://github.com/b3n4kh/mock-ssh-server/releases/download/0.9.2/mock-ssh-server-0.9.2.tar.gz"
]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/taranis-ai"

[project.scripts]
taranis-worker = "worker:main"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
root = "../.."

[tool.ruff]
line-length = 142
target-version = "py312"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning"
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 142
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring
"""

[tool.uv.sources]
taranis-models = { path = "../models" }
