[metadata]
name = taranis-ng_worker
version = 0.1.0
description = Taranis-NG Queue Worker
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = AIT
url = https://github.com/ait-cs-IaaS/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    # Core
    celery==5.3.1
    click==8.1.6
    python-dotenv==1.0.0
    pydantic
    requests==2.31.0

    # Collector
    beautifulsoup4==4.12.2
    trafilatura==1.6.1
    feedparser==6.0.10

    # Publisher
    pymisp==2.4.173
    paramiko==3.2.0
    python-gnupg==0.5.1
    tweepy==4.14.0

    # Presenters
    weasyprint==59.0

    # Bots
    torch
    spacy==3.6.0
    transformers==4.31.0
    sentencepiece==0.1.99
    py3langid==0.2.2
    polyfuzz==0.4.0
    nltk==3.8.1
    sentence-transformers==2.2.2
    keybert==0.7.0

    xx_ent_wiki_sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.6.0/xx_ent_wiki_sm-3.6.0-py3-none-any.whl
