[metadata]
name = taranis-ng_worker
version = 0.1.0
description = Taranis-NG Queue Worker
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL
platforms = any
author = AIT
url = https://github.com/SK-CERT/Taranis-NG
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    # Core
    celery
    click
    python-dotenv
    pydantic-settings

    # Collector
    beautifulsoup4
    requests
    trafilatura
    feedparser
