[project]
name = "taranis-load-tests"
version = "0.1.0"
description = "Manual Locust + Playwright load testing for Taranis AI"
requires-python = ">=3.12,<3.14"
dependencies = [
    "locust>=2.37,<3",
    "locust-plugins[playwright]>=4.7,<5",
    "playwright>=1.55,<2",
    "requests>=2.32,<3",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
